# SonicCave

./: .env  Cargo.toml  README.md  desktop.ini
entities/: Cargo.toml
entities/src/: album.rs  album_local_model.rs  artist.rs  artist_local_model.rs  lib.rs  mod.rs  playlist.rs  prelude.rs  return_id.rs  song.rs  song_local_model.rs  user.rs  user_local_model.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230120_000001_create_tables.rs  m20240124_122739_users.rs  m20240225_153942_users_extra_data.rs  m20240303_212729_playlists.rs
migrations/: 20250407145001_initial.sql  20250407193834_trigrams.sql
queries/: Cargo.toml
queries/src/: lib.rs
src/: auth_middleware.rs  database_sync.rs  endpoint_handlers.rs  explorer.rs  main.rs  mod.rs  tag_parser.rs
src/responses/: album_response.rs  mod.rs  responses.rs
