workspace = { members = ["entities", "migration"] }
[package]
name = "soniccave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id3 = "1.12.0"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
sqlx = { version = "0.7", default-features = false, optional = true, features = ["runtime-tokio"] }
sea-orm = { version = "^0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
entities = { path = "entities" }
migration = { path = "migration" }
axum = { version="0.7.4", features = ["macros"]}
hyper = { version = "1.1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"]}
serde = { version = "1.0.195", features = ["derive"] }
md-5 = "0.10.6"
tokio-util = "0.7.10"
chrono = "0.4.33"