workspace = { members = [ "entities", "queries"] }
[package]
name = "soniccave"
version = "0.1.0"
edition = "2021"

[dependencies]
id3 = "1.12.0"
metaflac = "0.2.8"
tokio = { version = "1.35.1", features = ["full"] }
async-recursion = "1.0.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "postgres"] }
entities = { path = "entities" }
queries = { path = "queries" }
axum = { version="0.7.4", features = ["macros"]}
axum-extra = {version = "0.9.2", features = ["query"]}
hyper = { version = "1.1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors"]}
serde = { version = "1.0.195", features = ["derive"] }
md-5 = "0.10.6"
tokio-util = "0.7.10"
chrono = "0.4.33"
rand = "0.8.5"
uuid = "1.7.0"
stderrlog = "0.6.0"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.20"
symphonia = { version= "0.5.3", features = ["all"] }
serde_json = "1.0.111"
stopwatch = "0.0.7"
blake3 = "1.8.1"

