[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "chrono", "uuid"] }
serde = { version = "1.0.195", features = ["derive"] }
uuid = { version = "1.7.0", features = ["serde"] }
chrono = { version = "0.4.33", features = ["serde"] } 
